; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mime.c_Curl_mime_size.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mime.c_Curl_mime_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, i32, i32, i32, %struct.TYPE_5__*, i32 }
%struct.TYPE_5__ = type { {}* }

@MIMEKIND_MULTIPART = common dso_local global i64 0, align 8
@MIME_BODY_ONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"Content-Type\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @Curl_mime_size(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @MIMEKIND_MULTIPART, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 6
  %12 = load i32, i32* %11, align 8
  %13 = call i64 @multipart_size(i32 %12)
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 1
  store i64 %13, i64* %15, align 8
  br label %16

16:                                               ; preds = %9, %1
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %3, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 5
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = icmp ne %struct.TYPE_5__* %22, null
  br i1 %23, label %24, label %33

24:                                               ; preds = %16
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 5
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = bitcast {}** %28 to i64 (%struct.TYPE_6__*)**
  %30 = load i64 (%struct.TYPE_6__*)*, i64 (%struct.TYPE_6__*)** %29, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %32 = call i64 %30(%struct.TYPE_6__* %31)
  store i64 %32, i64* %3, align 8
  br label %33

33:                                               ; preds = %24, %16
  %34 = load i64, i64* %3, align 8
  %35 = icmp sge i64 %34, 0
  br i1 %35, label %36, label %58

36:                                               ; preds = %33
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = load i32, i32* @MIME_BODY_ONLY, align 4
  %41 = and i32 %39, %40
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %58, label %43

43:                                               ; preds = %36
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 4
  %46 = load i32, i32* %45, align 8
  %47 = call i64 @slist_size(i32 %46, i32 2, i8* null)
  %48 = load i64, i64* %3, align 8
  %49 = add nsw i64 %48, %47
  store i64 %49, i64* %3, align 8
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 3
  %52 = load i32, i32* %51, align 4
  %53 = call i64 @slist_size(i32 %52, i32 2, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %54 = load i64, i64* %3, align 8
  %55 = add nsw i64 %54, %53
  store i64 %55, i64* %3, align 8
  %56 = load i64, i64* %3, align 8
  %57 = add nsw i64 %56, 2
  store i64 %57, i64* %3, align 8
  br label %58

58:                                               ; preds = %43, %36, %33
  %59 = load i64, i64* %3, align 8
  ret i64 %59
}

declare dso_local i64 @multipart_size(i32) #1

declare dso_local i64 @slist_size(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
